--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
     -->
 
     <script src="https://cdn.lordicon.com/qjzruarw.js"> </script>
+    <!-- <script src="https://kit.fontawesome.com/d1fc8657ff.js" crossorigin="anonymous"></script> -->
+
 
   </body>
 </html>
