--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is a Symposium website for the 2k22 batch of the Department of IT at R.M.K. @NMPro"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
+
 	
 	<!-- Stylesheets -->
 
@@ -51,7 +53,14 @@
 
     <script src="https://cdn.lordicon.com/qjzruarw.js"> </script>
     <!-- <script src="https://kit.fontawesome.com/d1fc8657ff.js" crossorigin="anonymous"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W7LVTE549F"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-W7LVTE549F');
+</script>
 
   </body>
 </html>
